Development
	Initialize a variable to NULL
    Globally initialize libCURL
    Don't update cover art when URL call fails
    Set the use-symbolic property on the GtkVolumeButton in GTK3
    Fix button sensitivity based on state
    More symbolic icon fixes
    Use the GTK3 symbolic icons when running in GTK3 mode
1.0.6
    Apply patch from David Coppa that removes the depreciated slide away code
    Separate delete and destroy events
    Updated Portuguese translation
    Updated Japanese translation
    Apply fix from David Coppa to fix problem with glib 2.32
    Fix gmlib includes due to change in gmtk .pc file
    Updated Turkish translation
1.0.6b1
    Updated Polish translation
    Fix gecko-mediaplayer Issue #106
    Fix gecko-mediaplayer Issue #167
    Add Kazakh translation, issue #601
    Take the KP_Enter patch, the volume adjustment values for keys GDK_9 & GDK_0 from Issue #598
    Enhance subtitle visibility tracking (requires minor gmtk updates)
    Rework keyhandler to use the custom key mappings
    Make customized keyboard shortcut for "Fullscreen Toggle" work in Fullscreen mode (part of Issue #600)
    Applied dbus.txt patch from Issue #595
    Applied uk.po patch from Issue #594
    Applied ru.po patch from Issue #593
    Applied ru.po patch from Issue #592
    Commit gvfs.patch from Issue #579
    Initialize a few more structs to zero
    Initialize buf to all zeros
    Additional NULL check
    Check for NULL values from gvfs, Issue #579
    Only try to enable dark theme in GTK3, Issue #591
    Hide message in normal mode
    Rework cover art fetch so that Amazon cover art is preferred over local thumbnail
    Use nautilus thumbnail for cover art if it exists
    ru.po fix Issue #586
    uk.po fix Issue #585
    Fix problem with directory vs dvd detection Issue #587
    Set PACKAGE_LOCALE_DIR based on --localedir from configure
    Add option to enable or disable Nautilus plugin in Edit->Preferences [Interface] tab