@@ -1,4 +1,5 @@
 Development
+	Fix usage of NULL pointer in nautilus property page
 	Initialize a variable to NULL
     Globally initialize libCURL
     Don't update cover art when URL call fails
